@@ -1,4 +1,17 @@
 package TestCase::CoreFunc::Basic {
+  use TestCase::Minimal;
+  
+  sub test_type_name : int () {
+    my $minimal = TestCase::Minimal->new;
+    my $type_name = type_name($minimal);
+    
+    unless ($type_name eq "TestCase::Minimal") {
+      return 0;
+    }
+    
+    return 1;
+  }
+  
   sub test_true : int () {
     my $true = TRUE();
     unless ($true->val == 1) {
